--- a/src/app/cadastro/cadastro.component.html
+++ b/src/app/cadastro/cadastro.component.html
@@ -7,7 +7,7 @@
 
     <body>
         <div class="container">
-            <img src="wine_glass_icon_125583.png"/>
+            <img src="https://uploaddeimagens.com.br/images/003/586/064/full/wine_glass_icon_125583.png"/>
             <h1>CADASTRE-SE</h1>
            <input type="text" name="e" placeholder="email">
            <input type="password" name="s" placeholder="senha">
