--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <app-login></app-login>
-<app-cadastro></app-cadastro>
+<app-cadastro (usuarioCadastrado)=""></app-cadastro>
 <app-header></app-header>
 <app-pesquisa></app-pesquisa>
