--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -4,14 +4,14 @@
   </head>
   <header>
     <div class="logo">
-      <img src="https://uploaddeimagens.com.br/images/003/586/064/full/wine_glass_icon_125583.png">
+      <a routerLink=""><img src="https://uploaddeimagens.com.br/images/003/586/064/full/wine_glass_icon_125583.png"></a>
     </div>
     <div class="search">
       <input type="text" placeholder="pesquise...">
       <img class="pesquisa" src="https://uploaddeimagens.com.br/images/003/586/066/full/search.png?1639457153">
     </div>
     <div class="profile">
-      <a href="#"><img src="https://uploaddeimagens.com.br/images/003/586/068/full/user.png?1639457242"></a>
+      <a routerLink="/login"><img src="https://uploaddeimagens.com.br/images/003/586/068/full/user.png?1639457242"></a>
     </div>
 </header>
 </html>
