--- a/src/app/pesquisa/pesquisa.component.css
+++ b/src/app/pesquisa/pesquisa.component.css
@@ -10,11 +10,10 @@ body {
   font-family: sans-serif;
   color: rgb(250, 250, 250);
   font-size: small;
-  top: 0;
 }
 
 .container {
-  margin: 0;
+  margin-top: 5%;;
   padding: 0;
   background-color: #fc3a51;
   height: 300vh;
