--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,17 +1,2 @@
-  <head>
-  <link rel="stylesheet" href="./header/header.component.css" type="text/css">
-  </head>
-  <header>
-    <div class="logo">
-      <a routerLink=""><img src="https://uploaddeimagens.com.br/images/003/586/064/full/wine_glass_icon_125583.png"></a>
-    </div>
-    <div class="search">
-      <input type="text" placeholder="pesquise...">
-      <img class="pesquisa" src="https://uploaddeimagens.com.br/images/003/586/066/full/search.png?1639457153">
-    </div>
-    <div class="profile">
-      <a routerLink="/login"><img src="https://uploaddeimagens.com.br/images/003/586/068/full/user.png?1639457242"></a>
-    </div>
-</header>
-
+<app-header></app-header>
 <router-outlet></router-outlet>
