--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,17 +1,8 @@
-<html>
-  <head>
-  <link rel="stylesheet" href="header.component.css" type="text/css">
-  </head>
-  <header>
-    <div class="logo">
-      <a routerLink=""><img src="https://uploaddeimagens.com.br/images/003/586/064/full/wine_glass_icon_125583.png"></a>
-    </div>
-    <div class="search">
-      <input type="text" placeholder="pesquise...">
-      <img class="pesquisa" src="https://uploaddeimagens.com.br/images/003/586/066/full/search.png?1639457153">
-    </div>
-    <div class="profile">
-      <a routerLink="/login"><img src="https://uploaddeimagens.com.br/images/003/586/068/full/user.png?1639457242"></a>
-    </div>
-</header>
-</html>
+<body>
+  <nav class="navMenu">
+    <a routerLink="/login">Perfil</a>
+    <a routerLink="/vinhos">Vinhos</a>
+    <a href="">Pesquisa</a>
+    <div class="dot"></div>
+  </nav>
+</body>
