--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,7 +1,7 @@
 <body>
   <nav class="navMenu">
     <a routerLink="/login">Perfil</a>
-    <a routerLink="/vinhos">Vinhos</a>
+    <a routerLink="/vinho">Vinhos</a>
     <a href="">Pesquisa</a>
     <div class="dot"></div>
   </nav>
