--- a/src/app/vinho/vinho.component.css
+++ b/src/app/vinho/vinho.component.css
@@ -1,10 +1,62 @@
-.img{
-    width: 500px;
-    margin-top: 20%;
+@import url('https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
+
+body{
+  background-color: #0e2430;
+  margin: 0;
 }
 
-.review{
-    border-width: medium;
-  border-style: solid;
-  border-color: #00f;
+.wrapper{
+  display: grid;
+  grid-template-columns: 300px 300px;
+}
+
+.img{
+    width: 500px;
+    padding-top: 50%;
+    padding-left: 150px;
+}
+
+  .titulo {
+    color: white;
+    font-family: 'Libre Baskerville', serif;
+    font-weight: bold;
+    font-size: xx-large;
+    margin-left: 300px;
+
+  }
+
+.card {
+  padding-left: 280px;
+  padding-top: 50px;
+  color: white;
+  font-family: 'Roboto', sans-serif;
+}
+
+
+
+  .review{
+    box-shadow: rgba(156, 156, 156, 0.25) 0px 30px 60px -12px, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px;
+    background: #fc3a51;
+    border-radius: 10px;
+    margin-left: 25px;
+    padding-left: 20px;
+    font-family: 'Montserrat', sans-serif;]
+    box-sizing: 200%;
+    }
+
+    .estrelas {
+      padding-left: 850px;
+    }
+
+  h2 {
+    color: white;
+    font-family: Montserrat;
+    font-size: x-large;
+  }
+
+  .resenhas {
+    margin-top: 470px;
+    margin-left: -200px;
   }
