--- a/src/app/vinho/vinho.component.html
+++ b/src/app/vinho/vinho.component.html
@@ -7,33 +7,35 @@
 </head>
 
 <body>
-    <div class="titulo">{{vinho[0].productName}}</div>
+  <div class="wrapper">
     <div class="img">
         <img [attr.src]=" vinho[0].image">
-        <div class="pais">País de origem: {{vinho[0].originCountry}}</div>
-        <div class="tipo">Tipo do vinho: {{vinho[0].wineType}}</div>
-        <div class="tipoUva">Tipo da uva: {{vinho[0].grapeType}}</div>
-        <div class="harmonizacao">Harmonizações:</div>
-        <div class="listaHarmonizacao">
-            <p ng-repeat="(harmonizing, value) in vinho">{{vinho[0].harmonizing}}</p>
-        </div>
-        <div class="harmonizacao">Resenhas:</div>
+        <div class="titulo">{{vinho[0].productName}}</div>
+        <div class="card">
+        País de origem: {{vinho[0].originCountry}}
+        <br>Tipo do vinho: {{vinho[0].wineType}}
+        <br>Tipo da uva: {{vinho[0].grapeType}}
+        <br>Harmonizações: <p ng-repeat="(harmonizing, value) in vinho">{{vinho[0].harmonizing}}</p>
+      </div>
+    </div>
+
+        <div class="resenhas"><h2>RESENHAS:</h2></div>
 
         <div class="listaReview">
             <tbody *ngFor="let vin of vinho; let i = index">
-                
+
                     <tr *ngFor="let review of vin.review;">
+
                         <div class="review">
-                        <p>Resenha</p>
+                          <div class="estrelas"><p>Estrelas: {{review.stars}}</p></div>
                         <p>Nome: {{review.name}}</p>
                         <p>Email: {{review.email}}</p>
                         <p>Vinho: {{review.productName}}</p>
-                        <p>Estrelas: {{review.stars}}</p>
                         <p>Resenha: {{review.review}}</p>
-                        
+
                     </div>
                     </tr>
-                
+
             </tbody>
 
         </div>
