--- a/src/app/pesquisa/pesquisa.component.html
+++ b/src/app/pesquisa/pesquisa.component.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <link rel="stylesheet" href="pesquisa.component.css" type="text/css">
-    <link href="grid/simple-grid.min.css" rel="stylesheet">
+    <link href="../simple-grid.min.css" rel="stylesheet">
   </head>
   <body>
     <div class="container">
