--- a/src/app/vinho/vinho.component.css
+++ b/src/app/vinho/vinho.component.css
@@ -34,16 +34,14 @@ body{
   font-family: 'Roboto', sans-serif;
 }
 
-
-
   .review{
     box-shadow: rgba(156, 156, 156, 0.25) 0px 30px 60px -12px, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px;
     background: #fc3a51;
     border-radius: 10px;
     margin-left: 25px;
     padding-left: 20px;
-    font-family: 'Montserrat', sans-serif;]
-    box-sizing: 200%;
+    font-family: 'Montserrat', sans-serif;
+    width: 100px;
     }
 
     .estrelas {
