--- a/src/app/vinho/vinho.component.html
+++ b/src/app/vinho/vinho.component.html
@@ -4,6 +4,8 @@
 <head>
     <title>Vinho</title>
     <link rel="stylesheet" href="vinho.component.css" type="text/css">
+    <link rel="stylesheet" href="grid/simple-grid.min.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <body>
