--- a/src/app/vinho/vinho.component.css
+++ b/src/app/vinho/vinho.component.css
@@ -5,6 +5,7 @@
 body{
   background-color: #0e2430;
   margin: 0;
+  height: 470vh;
 }
 
 .wrapper{
@@ -38,10 +39,11 @@ body{
     box-shadow: rgba(156, 156, 156, 0.25) 0px 30px 60px -12px, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px;
     background: #fc3a51;
     border-radius: 10px;
-    margin-left: 25px;
+    margin-left: 220px;
     padding-left: 20px;
     font-family: 'Montserrat', sans-serif;
-    width: 100px;
+    width: 950px;
+    text-align: center;
     }
 
     .estrelas {
