--- a/src/app/pesquisa/pesquisa.component.css
+++ b/src/app/pesquisa/pesquisa.component.css
@@ -27,11 +27,11 @@ button {
 }
 
 button:hover{
-  background-color:#0e2430;
+  background-color:#fc3a51;
 }
 
 button:active{
-  background-color: #0e2430;
+  background-color: #fc3a51;
 }
 
 .search .pesquisa {
