--- a/src/app/pesquisa/pesquisa.component.html
+++ b/src/app/pesquisa/pesquisa.component.html
@@ -4,6 +4,7 @@
     <link rel="stylesheet" href="pesquisa.component.css" type="text/css">
   </head>
   <body>
+    <div class ="main">
     <div class="container">
     <h2>Tipos de vinho</h2>
     <button type="button">Tinto</button>
@@ -64,5 +65,11 @@
     <h2>Harmonização com comidas</h2>
 
   </div>
+
+  <div>
+    <h1>AQUIIIII</h1>
+  </div>
+
+</div>
   </body>
 </html>
