--- a/src/app/pesquisa/pesquisa.component.html
+++ b/src/app/pesquisa/pesquisa.component.html
@@ -15,18 +15,19 @@
       <button type="button">Fortificado</button>
 
       <h2>Faixa de preços</h2>
-      <mat-slider min="0" max="1500" step="0.5" value="1.5"></mat-slider>
+      <mat-slider min="0" max="1300" step="5" value="5" thumbLabel></mat-slider>
 
       <h2>Classificação em estrelas</h2>
-      <input type="radio" id="html" name="fav_language" value="HTML">
+      <div class="radio2">
+      <input type="radio" id="4estrelas2" name="radio" value="HTML">
       <label for="4estrelas"> 4.2+ Muito Raro</label><br>
-      <input type="radio" id="4estrelas" name="fav_language" value="4estrelas">
+      <input type="radio" id="3estrelas8" name="radio" value="4estrelas">
       <label for="3estrelase8"> 3.8+ Bom</label><br>
-      <input type="radio" id="3estrelase8" name="fav_language" value="3estrelase8">
+      <input type="radio" id="3estrelase6" name="radio" value="3estrelase8">
       <label for="3estrelase6"> 3.6+ Comum</label><br>
-      <input type="radio" id="qualquer" name="fav_language" value="qualquer">
-        <label for="qualquer">Qualquer classificação</label>
-
+      <input type="radio" id="qualquer" name="radio" value="qualquer">
+      <label for="qualquer">Qualquer classificação</label>
+    </div>
       <h2>Uvas</h2>
       <button type="button">Cabernet Franc</button>
       <button type="button">Cabernet Sauvignon</button>
@@ -74,7 +75,7 @@
     </div>
 
     <div class="coluna-2">
-      cvbvcb
+      <h3>RESULTADO DA PESQUISA</h3>
     </div>
   </div>
 </body>
