--- a/src/app/vinho/vinho.component.css
+++ b/src/app/vinho/vinho.component.css
@@ -1,62 +1,62 @@
-@import url('https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@700&display=swap');
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap");
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&family=Roboto&display=swap');
 
-body{
-  background-color: #0e2430;
+body {
   margin: 0;
-  height: 470vh;
+  padding: 0;
+  background-color: #0e2430;
+  height: 620vh;
 }
 
-.wrapper{
-  display: grid;
-  grid-template-columns: 300px 300px;
+img {
+  width: 80%;
 }
 
-.img{
-    width: 500px;
-    padding-top: 50%;
-    padding-left: 150px;
+.fundo-header{
+  background-color: #fc3a51;
+  padding-bottom: 20px;
+  padding-top: 20px;
+  text-align: center;
+  font-size: xx-large;
+  font-family: Montserrat;
 }
-
-  .titulo {
-    color: white;
-    font-family: 'Libre Baskerville', serif;
-    font-weight: bold;
-    font-size: xx-large;
-    margin-left: 300px;
-
-  }
 
 .card {
-  padding-left: 280px;
-  padding-top: 50px;
-  color: white;
-  font-family: 'Roboto', sans-serif;
+ padding-left: 50%;
+ padding-top: -50%;
 }
 
-  .review{
-    box-shadow: rgba(156, 156, 156, 0.25) 0px 30px 60px -12px, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px;
-    background: #fc3a51;
-    border-radius: 10px;
-    margin-left: 220px;
-    padding-left: 20px;
-    font-family: 'Montserrat', sans-serif;
-    width: 950px;
-    text-align: center;
-    }
+.tela-inteira{
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  margin-top: 50px;
+}
 
-    .estrelas {
-      padding-left: 850px;
-    }
+.coluna2 {
+  color: white;
+  margin-top: 100px;
+}
 
-  h2 {
-    color: white;
-    font-family: Montserrat;
-    font-size: x-large;
-  }
 
-  .resenhas {
-    margin-top: 470px;
-    margin-left: -200px;
-  }
+.resenhas{
+  font-size:xx-large;
+  font-family: Montserrat;
+  color: white;
+  padding-top: 80px;
+  padding-left: 20px;
+  text-align: center;
+}
+
+.review {
+  background-color: #fc3a51;
+  width: 50em;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  padding-left: 20px;
+  margin-bottom: 10px;
+  margin-left: 10em;
+  font-size: large;
+}
+
+.estrelas {
+  padding-left: 40em;
+}
